<resources>
    <string name="app_name">鹿班师傅端</string>
    <string name="txt_login_page_title">登录</string>
    <string name="txt_login_page_desc">优秀的鹿班工程师，请获取验证码进行登录</string>
    <string name="txt_login_page_phone_hint">请输入手机号码</string>
    <string name="txt_login_page_code_hint">请输入验证码</string>
    <string name="txt_login_page_send_code">发送验证码</string>
    <string name="txt_login_page_send_code_again">重新发送</string>
    <string name="txt_login_page_send_code_again1">重新发送(%dS)</string>
    <string name="txt_work_sheet_details_title">工单详情</string>
    <string name="nowork_tip">暂时还没有工单</string>
    <string name="msg_center">消息中心</string>
    <string name="work_list_reflush">刷新列表</string>
    <string name="nowork_tip2">休息一会"刷新列表"试试</string>
    <string name="txt_work_sheet_details_contact_way">联系方式:</string>
    <string name="txt_work_sheet_details_contact">联&#160;&#160;系&#160; 人:</string>
    <string name="txt_work_sheet_details_work_sheet_no">工&#160;&#160;单&#160; 号:</string>
    <string name="txt_work_sheet_details_address">服务地址:</string>
    <string name="txt_work_sheet_details_cancel_reason">取消原因:</string>
    <string name="txt_work_sheet_details_time">预约时间:</string>
    <string name="txt_work_sheet_details_comment_info">备注信息:</string>
    <string name="txt_work_sheet_details_service_content">服务内容:</string>
    <string name="txt_work_sheet_details_sign_exception">标记异常</string>
    <string name="txt_work_sheet_details_on_road">开始上门</string>
    <string name="txt_work_sheet_details_start_service">开始服务</string>
    <string name="txt_work_sheet_details_service_completed">服务完成</string>
    <string name="txt_copy">复制</string>
    <string name="txt_sheet_state_to_perform">待执行</string>
    <string name="txt_sheet_state_on_road">正在上门</string>
    <string name="txt_sheet_state_in_service">服务中</string>
    <string name="txt_sheet_state_completed">已完成</string>
    <string name="txt_sheet_state_canceled">已取消</string>
    <string name="txt_sign_exception_page_title">标记异常</string>
    <string name="txt_sign_exception_reason_1">用户主动取消订单</string>
    <string name="txt_sign_exception_reason_2">已到达目的地，与用户无法取得联系</string>
    <string name="txt_sign_exception_reason_3">临时有事，请求更换师傅</string>
    <string name="txt_sign_exception_reason_4">其他</string>
    <string name="txt_sign_exception">在这里写出标记异常原因</string>
    <string name="txt_submit_exception">提交</string>
    <string name="txt_phone_num_is_not_empty">手机号不能为空</string>
    <string name="txt_phone_num_is_error">请输入正确的手机号</string>
    <string name="txt_is_sending_auth_code">正在发送验证码...</string>
    <string name="txt_is_login">登陆中...</string>
    <string name="txt_net_connect_error">网络连接错误(%d)</string>
    <string name="txt_loading">加载中...</string>
    <string name="txt_calling">即将拨打电话</string>
    <string name="txt_make_sure_phone">确定拨打电话:%s吗？</string>
    <string name="txt_sure">确认</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_copy_success">复制成功</string>
    <string name="txt_submit">提交中...</string>
    <string name="txt_exception_empty">异常原因不能为空哦！~</string>
    <string name="txt_choose_exception">请选择异常原因哦！~</string>
    <string name="txt_submit_success">提交成功</string>
    <string name="txt_submit_success_service">已成功提交异常工单，请及时联系客服进行审核</string>
    <string name="txt_contact_service">联系客服</string>
    <string name="txt_later_call">稍后拨打</string>
    <string name="txt_is_open_permission">是否打开权限</string>
    <string name="txt_allow">允许</string>
    <string name="txt_reject">拒绝</string>
    <string name="txt_permission_fail">获取权限失败</string>
    <string name="txt_go_setting">请到设置页面打开权限</string>
    <string name="txt_confirm_remind">确认提醒</string>
    <string name="txt_confirm_call_service">确定拨打客服热线:%s吗?</string>
</resources>
