<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:background="@color/color_f4f4f4"
    android:layout_height="match_parent">
<RelativeLayout
    android:id="@+id/dfdf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/no_work"
        android:src="@drawable/nowork"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/h_61dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/no_work_tip1"
        android:text="@string/nowork_tip"
        android:textSize="@dimen/text_size_13"
        android:layout_marginTop="@dimen/h_19dp"
        android:textColor="@color/color_333333"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/no_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/no_work_tip2"
        android:text="@string/nowork_tip2"
        android:textSize="@dimen/text_size_13"
        android:layout_marginTop="@dimen/h_13dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/color_666666"
        android:layout_below="@+id/no_work_tip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/work_reflush_lay"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/color_e94b4e"
        android:layout_height="@dimen/h_49dp">
        <ImageView
            android:src="@drawable/work_reflush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            android:text="@string/work_list_reflush"
            android:layout_marginLeft="@dimen/h_12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
</RelativeLayout>